Implement concurrent booking with locks in BookingService
Updated booking logic to handle concurrent ticket bookings using threads and locks. Refactored seat booking to use ReentrantLock for thread safety.